# scv

./: .gitignore  DCNv2_tuner_config_KKBox.csv  DCNv2_tuner_config_ML_1M.csv  DCNv2_tuner_config_iPinYou.csv  DCNv3TriBCE_tuner_config_iPinYou.csv  DCNv3_tuner_config_ML_1M.csv  DCNv3_tuner_config_iPinYou.csv  DCNv3_tuner_config_iPinYou_backup.pkl  Dockerfile  GNNv3_v8_exp_dropout_tuner_config_iPinYou.csv  GNNv3_v8_expnummask_tuner_config_iPinYou.csv  GNNv3_v8_expnumtower_tuner_config_iPinYou.csv  IGDCNv3_tuner_config_ML_1M.csv  LogCNv3_exp_bnln_config_iPinYou.pkl  LogCNv3_exp_normlocation_config_iPinYou.csv  LogDCN_exp_normfinal_iPinYou_x1.csv  LogDCNv2_tuner_config_iPinYou.csv  PGAResNetDCNv3_exp_crosslayer_tuner_config_iPinYou.csv  PGAResNet_exp_crosslayer_tuner_config_iPinYou.csv  PGAResNet_exp_init_tuner_config_iPinYou.csv  PGAResNet_exp_maskbias_tuner_config_iPinYou.csv  PGAResNet_exp_masklocation_tuner_config_iPinYou.csv  PGAResNet_tuner_config_iPinYou copy.csv  PGAResNet_tuner_config_iPinYou.csv  PGAViT_tuner_config_iPinYou.csv  README.md  SCV_light_loca_adadis_KKBox_x1.json  SCV_light_loca_adadis_dropout_tuner_config_Criteo.csv  SCV_light_loca_adadis_iPinYou_x1.json  SSLViTDCNv2_tuner_config_ML_1M.csv  SSLViTDCNv3_tuner_config_ML_1M.csv  ViTDCNv2ReLU_tuner_config_ML_1M.csv  ViTDCNv2WOD_tuner_config_ML_1M.csv  ViTDCNv2_tuner_config_ML_1M.csv  ViTDCNv2_tuner_config_iPinYou.csv  ViTDCNv2cross_tuner_config_ML_1M.csv  ViTDCNv2lr_tuner_config_ML_1M.csv  ViTDCNv3HeavyDetach_tuner_config_ML_1M.csv  ViTDCNv3HeavyDetailed_tuner_config_iPinYou copy.csv  (+28 more)
src/: DCNv3.py  (+22 more)
(+828 files in other folders)
